tester/src/test/aya/failure/syntax/issue350-not-id.aya.txt
In file $FILE:1:21 ->

  1 | def x : \Set => \lam 1 => x
                           ^^
  
Error: Parser error: `1` is not a parameter name
Parsing interrupted due to errors.
What are you doing?
